--- a/.github/workflows/tests-orders.yml
+++ b/.github/workflows/tests-orders.yml
@@ -2,8 +2,10 @@ name: tests
 
 on:
   pull_request:
+    paths:
+      - "orders/**"
     branches:
-      - main  # Adjust the branch name as needed
+      - main
 
 jobs:
   build:
