--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: cd auth && docker build -t ayaz2005/auth .
-    - run: docker login -e $DOCKER_EMAIL -p $DOCKER_PASSWORD
+    - run: docker login -u $DOCKER_EMAIL -p $DOCKER_PASSWORD
       env: 
          DOCKER_EMAIL: ${{ secrets.DOCKER_EMAIL }}
          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD }}
