--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -21,4 +21,9 @@ jobs:
          DOCKER_EMAIL: ${{ secrets.DOCKER_EMAIL }}
          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD }}
     - run: docker push ayaz2005/auth
+    - uses: digitalocean/action-doctl@v2
+      with: 
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+    - run: doctl kubernetes cluster kubeconfig save k8s-1-29-0-do-0-tor1-1706555790015
+    - run: kubectl rollout restart deployment auth-depl
      
