--- a/.github/workflows/deply-manifest.yml
+++ b/.github/workflows/deply-manifest.yml
@@ -19,5 +19,5 @@ jobs:
       with: 
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
     - run: doctl kubernetes cluster kubeconfig save k8s-1-29-0-do-0-tor1-1706555790015
-    - run: kubectl apply -f infra/k8s
+    - run: kubectl apply -f infra/k8s && kubectl apply -f infra/k8s-prod
      
